2010-03-22  Abel Cheung

	* Make life a bit harder for script kiddies.
	* All include files are renamed to .inc file extension.
	* Guard against folder listing and direct access to inc files.
	* wp-scorerender.php:
	- Include files are renamed.
	- Die more gracefully upon direct execution.
	* notation/abc.inc:
	- Fine tuning of zoom ratio, margin and width so image width wouldn't
	  deviate too much from setting.

2010-03-20  Abel Cheung

	* scorerender-class.php, scorerender-admin.php:
	- Only store one copy of ImageMagick requirement check data.
	* wp-scorerender.php, scorerender-admin.php:
	- Move admin related constants to scorerender-admin.php .
	- Define regex for midi and delete midi too when cleaning cache.
	* scorerender-admin.php:
	- (get_num_of_images) -> get_cache_stat
	- (admin_section_caching) Some wording touches.
	* wp-scorerender.php:
	- (scorerender_return_img_ok) Don't differentiate between MIDI
	  generation failure and file not found, as generation failure is only
	  triggered on first image rendering, and later they are virtually
	  undistinguishable, especially for certain notations.
	- Use filter instead of action to register notations.
	* scorerender-class.php, scorerender-admin.php wp-scorerender.php:
	- Move global ScoreRender options and notation data into SrNotationBase class.
	* scorerender-class.php, notation/*.php:
	- (register_notation_data) Return new notation data.

2010-03-19  Abel Cheung

	* wp-scorerender.php:
	- Allows midi generation to be overridden in shortcode.

2010-03-18  Abel Cheung

	* MIDI support for other notations basically complete.
	* scorerender-admin.php:
	- (print_description) New func, handle the continually changing
	  ways of printing setting descriptions.
	* wp-scorerender.php:
	- (scorerender_return_fragment_error) -> scorerender_return_img_error
	- (scorerender_return_fragment_ok) -> scorerender_return_img_ok
	- (scorerender_return_img_ok) Return early for empty content.
	* scorerender-utils.php: