@@ -106,7 +106,7 @@ protected function conversion_step2 ($intermediate_image) /* {{{ */
 /**
  * Refer to {@link SrNotationBase::get_midi() parent method} for more detail.
  */
-protected function get_midi () /* {{{ */
+protected function get_midi ( $attr ) /* {{{ */
 {
 	return filesize ($this->midi_file) ? $this->midi_file : false;
 } /* }}} */
